# ci-cd-assignment

./: Dockerfile  Jenkinsfile  pyproject.toml
calcapp/: calc.py
tests/: test_calc.py
