[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calcapp"
version = "0.1.0"
description = "Simple calculator (add, subtract, product) for two positive integers"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["calcapp"]
